--- a/SEC4.3.0/ROP/ROP/My Project/Resources.resx
+++ b/SEC4.3.0/ROP/ROP/My Project/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -114,4 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="cuartoLimiteRentaIndependiente" xml:space="preserve">
+    <value>18113000.0</value>
+  </data>
+  <data name="cuartoTramoRentaIndependiente" xml:space="preserve">
+    <value>0.1</value>
+  </data>
+  <data name="porcentajeLimiteSalario" xml:space="preserve">
+    <value>0.1</value>
+  </data>
+  <data name="primerLimiteRentaAsalariado" xml:space="preserve">
+    <value>817000.0</value>
+  </data>
+  <data name="primerLimiteRentaIndependiente" xml:space="preserve">
+    <value>3628000.0</value>
+  </data>
+  <data name="primerPorcentajeCargaSocial" xml:space="preserve">
+    <value>0.055</value>
+  </data>
+  <data name="primerTramoRentaAsalariado" xml:space="preserve">
+    <value>0.15</value>
+  </data>
+  <data name="primerTramoRentaIndependiente" xml:space="preserve">
+    <value>0.25</value>
+  </data>
+  <data name="quintoTramoRentaIndependiente" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="segundoLimiteRentaAsalariado" xml:space="preserve">
+    <value>1226000.0</value>
+  </data>
+  <data name="segundoLimiteRentaIndependiente" xml:space="preserve">
+    <value>5418000.0</value>
+  </data>
+  <data name="segundoPorcentajeCargaSocial" xml:space="preserve">
+    <value>0.0334</value>
+  </data>
+  <data name="segundoTramoRentaAsalariado" xml:space="preserve">
+    <value>0.1</value>
+  </data>
+  <data name="segundoTramoRentaIndependiente" xml:space="preserve">
+    <value>0.20</value>
+  </data>
+  <data name="tercerLimiteRentaIndependiente" xml:space="preserve">
+    <value>9038000.0</value>
+  </data>
+  <data name="tercerTramoRentaAsalariado" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="tercerTramoRentaIndependiente" xml:space="preserve">
+    <value>0.15</value>
+  </data>
 </root>
